--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -6,7 +6,7 @@
 
 <%- include('../components/about') %>
 
-<%- include('../components/release') %>
+<%# include('../components/release') %>
 
 <% include('../components/testimony') %>
 
