--- a/views/book/list.ejs
+++ b/views/book/list.ejs
@@ -6,7 +6,9 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate mb-0 text-center">
-                    <h1 class="mb-0 bread" style="color: white;">Catalogue</h1>
+                    <h1 class="mb-0 bread" style="color: white;">
+                        <%= text %>
+                    </h1>
                 </div>
             </div>
         </div>
