update on home and team pages

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -6,9 +6,9 @@
 
 <%- include('../components/about') %>
 
-<%# include('../components/release') %>
+<%- include('../components/release') %>
 
-<% include('../components/testimony') %>
+<%# include('../components/testimony') %>
 
 <%# include('../components/soon') %>
 
